# spus

./: .env  Cargo.toml  db-setup.bash  diesel.toml  docker-compose.yaml
migrations/2025-02-01-050505_create_url/: down.sql  up.sql
migrations/2025-02-03-011107_create_url_assoc/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  service.rs  utils.rs
src/db/: url.rs
src/service/: long_url.rs  short_url.rs
src/utils/: common_utils.rs  config.rs  response.rs
