[package]
name = "spus"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = '^0.1.0', features = [ 'log' ] }
tracing-subscriber = { version = '^0.3.0', features = [ 'env-filter', 'registry' ] }
tracing-log = { version = '^0.2.0' }
tracing-bunyan-formatter = "^0.3.10"
axum = { version = '^0.8.1', features = [ 'default' ] }
tokio = { version = '^1.4.0', features = [ 'macros', 'rt-multi-thread' ] }
nanoid = '^0.4.0'
dotenv = '^0.15'
log = '^0.4.25'
serde = { version = '^1.0.0', features = [ 'default', 'derive' ] }
serde_json = '^1.0.1'
diesel = { version = "^2.2.0", features = ["postgres", "serde_json", "chrono", "r2d2"] }
thiserror = { version = '^2.0.0' }
chrono = { version = "^0.4.0", features = ["serde"] }
url = "^2.5.0"
